# IniEasy

./: .clang-format  .gitignore  README.md
include/: ini_handler.h  ini_handler.hpp
test/: CMakeLists.txt  ini_test  ini_test.cc  test_ini_parser.ini
